--- a/report/references.tex
+++ b/report/references.tex
@@ -50,6 +50,10 @@ D.L. Hall and J. Llinas. An introduction to multisensor data fusion.
 BOKEN
 \textit{BOKEN}. 
 
+\bibitem{SNAME} 
+Society of Naval Architects and Marine Engineers (SNAME), "Principles of Naval Architecture", 1989, Vol. III,
+\textit{SNAME}. 
+
  
 \bibitem{nonlinear} 
 Dr. Oliver Nelles
