--- a/report/android.tex
+++ b/report/android.tex
@@ -18,15 +18,15 @@ Given these states appropriate feedback was given to the user.
 \subsubsection{Visual Feedback}
 It was determined that the visual feedback given to the sailor was to include very little text information and would consist mainly of images that changes position based on sensor data to give a good representation of what was going on with the ship. Because of different personal preferences the ability to switch between different layouts was implemented. To switch between different layouts a simple swipe on the screen toggled the view to the next layout. All layouts consisted of a subset of views from the complete set including
 \begin{labeling}{alligator}
-\item [\ref{feedback-incline} \textbf{Incline}]  displayed a ships relative incline against and artificial horizont
-\item [\ref{feedback-pressure} \textbf{Pressure}] moved a pin along a colored bar to represent high of low pressure applied on the centerboard
-\item [\ref{feedback-compass} \textbf{Bearing}] rotated a compass to show the ship relative bearing against true north
-\item [\ref{feedback-map} \textbf{Map}] displayed current location of the ship
+\item [\ref{feedback-incline} \textbf{Incline}]  displayed a ships relative incline against and artificial horizont.
+\item [\ref{feedback-pressure} \textbf{Pressure}] moved a pin along a colored bar to represent high of low pressure applied on the centerboard.
+\item [\ref{feedback-compass} \textbf{Bearing}] rotated a compass to show the ship relative bearing against true north.
+\item [\ref{feedback-map} \textbf{Map}] displayed current location of the ship.
 \item [\ref{feedback-drift} \textbf{Drift}] was represented with a colored bar with two arrows that moved to the relative drift direction to show the sailor if the ship was holding it's set navigaitional reference.
-\item [\ref{feedback-height} \textbf{Speed}] displayed a speedometer from a classical Swedish vehicle\cite{volvo} with a movable bar representing speed over ground
-\item [\ref{feedback-sog} \textbf{Height}] of the centerboard was represented with a visual centerboard moving up and down along a graphical ruler
-\item [\ref{feedback-wave} \textbf{Wave frequency}] displayed a wave moving towards a ship at a speed representing different periods of the waves
-\item [\ref{feedback-text} \textbf{Feedback}] a text that changed values based on the current state of the boat
+\item [\ref{feedback-height} \textbf{Speed}] displayed a speedometer from a classical Swedish vehicle\cite{volvo} with a movable bar representing speed over ground.
+\item [\ref{feedback-sog} \textbf{Height}] of the centerboard was represented with a visual centerboard moving up and down along a graphical ruler.
+\item [\ref{feedback-wave} \textbf{Wave frequency}] displayed a wave moving towards a ship at a speed representing different periods of the waves.
+\item [\ref{feedback-text} \textbf{Feedback}] a text that changed values based on the current state of the boat.
 \end{labeling}
 
 \begin{figure}[H]
@@ -142,7 +142,7 @@ Calculation of leeward drift was done by inspection of both pressure produced on
   \lambda_2 = \Delta\lambda_1 + \Delta\lambda
   \end{aligned}\\
 \end{align*}
-where $R$ is the earths radius, $d$ is the distance traveled, $\theta$ is ships bearing, $\lambda_1$ and $\psi_1$ is the point of origin in longitude and latitude. This new estimated position was then compared to the next positional data from the \textit{GPS} and the distance between these points was caluculated using \textit{Equirectangular projection}\cite{equitriangular}
+where $R$ is the earths radius, $d$ is the distance traveled, $\theta$ is ships bearing, $\lambda_1$ and $\varphi_1$ is the point of origin in longitude and latitude. This new estimated position $\lambda_2$ and $\varphi_2$ was then compared to the next positional data from the \textit{GPS} and the distance between these points was caluculated using \textit{Equirectangular projection}\cite{equitriangular}
 %x = Δλ ⋅ cos φm
 %y = Δφ
 %d = R ⋅ √x² + y²
@@ -157,7 +157,7 @@ where $R$ is the earths radius, $d$ is the distance traveled, $\theta$ is ships 
   d = R\cdot\sqrt{x^2+y^2}
   \end{aligned}\\
 \end{align*}
-where $\Delta\lambda$ and $\Delta\varphi$ are the differences in longitude and latitude for two location points. This function had high performace gain but was less accurate over large distances then for example the \textit{Haversine formula}\cite{haversine}. Since for this function only small changes in distance were calculated the accuracy was more then adequate. A problem with this way of calculating leeward drift is the accuracy of the \textit{GPS} readings. This could be improved with filtering.
+where $\Delta\lambda$ and $\Delta\varphi$ are the differences in longitude and latitude for two location points. This function had high performace gain but was less accurate over large distances then for example the \textit{Haversine formula}\cite{haversine}. Since for this function only small changes in distance were calculated the accuracy was more then adequate. A problem with this way of calculating leeward drift is the accuracy of the \textit{GPS} readings and to get a good bearing the idea was to make use of the magnetometer though the accuracy of that is also far from perfect and a small deviation of a couple of degrees resulted in a large drift. The solution was to use the directional data sent from the gps module which calculates direction based on last positional data. This solution would work good for movement forward and when fast sideways motion is detected the estimated position would be along the same vecor as the previous direction. However for constant drift sideways this approach would display that no drift were taking place.
 
 
 
