--- a/report/kf.tex
+++ b/report/kf.tex
@@ -1,37 +1,37 @@
-\newpage
+
 \section{Introduction}
 \subsection*{Sensor theory}
-Sensor fusion can be observed everywhere e.g., living animals uses all of its senses to survive daily, an animal cannot hunt using its eyes only, it has to combine its sense of smell, eyes and hearing to hunt the pray\cite{animal}. Sensor fusion theory is not only found in the living species it is found in cars, planes, computers and so on and this to enhance performance and accuracy \cite{animal}. In this project sensor fusion will be used to enhance the accuracy of the dinghy's position and velocity. The fusion will be between a global positioning system, GPS and an inertial navigation system, INS. The INS build on a low price inertial measurement unit.\\ 
-The GPS's accuracy is not uniform since it might be buildings reflections, atmospherics delays or clock bias errors \cite{boken}. Using only information provided by a INS is not sufficient either since the sensors in the IMU will drift after time, but using the information provided by the sensors in the IMU only for short time will give accurate readings.  
+Sensor fusion can be observed everywhere e.g., living animals uses all of its senses to survive daily, an animal cannot hunt using its eyes only, it has to combine its sense of smell, eyes, and hearing to hunt the pray\cite{animal}. Sensor fusion theory is not only found in the living species it is found in cars, planes, computers and so on and this to enhance performance and accuracy \cite{animal}. In this project a sensor fusion will be designed to enhance the accuracy of the dinghy's position and velocity. The fusion will be between a global positioning system, GPS and an Inertial Navigation System, INS. The INS contains on a low priced, Inertial Measurement Unit, IMU.\\ 
+The GPS's accuracy is not uniform since there might be building reflections, atmospherics delays or clock bias errors \cite{boken}. Using the only information provided by an SINS is not sufficient either since the IMU sensor will drift after time, but using the information provided by the INS for short time intervals will give more accurate results.  
 
 \subsection{Inertial Navigation System}
-In navigation there exist different techniques on how to navigate using an IMU, a typical technique is using a strapdown inertial navigation system, SINS. A SINS consists of an Inertial Measurement Unit, IMU which is mounted on the dinghy so it measures the acceleration and rotational rate that the dinghy encounters.
-The concepts of inertial navigation are to determine the position and velocity of the dinghy from a known staring point, using only measurements from the IMU. The IMU, in this case consists of a three-axis gyroscope, a three-axis accelerometer, and a three-axis magnetometer. \\
+In navigation there exist different techniques on how to navigate using an IMU, a typical technique is using a Strapdown Inertial Navigation System, SINS. A SINS consists of an IMU which is mounted on the dinghy so it measures the acceleration and rotational rate that the dinghy encounters.
+The concepts of inertial navigation is to determine the position and velocity of the dinghy from a known starting point, using only measurements from the IMU. The IMU, in this case, consists of a three-axis gyroscope, a three-axis accelerometer, and a three-axis magnetometer. \\
 Measurement from the gyroscope is to determine the angular motion of the dinghy, from that its heading relative to a reference frame can be derived.
 By measuring specific forces acting on the dinghy using the accelerometer, then resolve the specific force measurements into the reference frame using the knowledge derived from the information provided by the gyroscope. 
 Integrate the resolved specific force measurements to obtain its velocity and position. \cite{non-linear} 
 
 
 \subsection{Sensor fusion}
-A popular filter to use when applying sensor fusion is to use a Kalman filter, (KF). The Kalman Filter is a recursive filtering method for discrete data, the algorithm was developed by an Hungarian mathematician Rudolf (Rudi) Emil Kalman in 1960 \cite{boken}. Its popular to use due to its efficiency when calculating predictions. \cite{kf eff}
+A popular filter to use when applying sensor fusion is to use a Kalman filter, (KF). The Kalman Filter is a recursive filtering method for discrete data, the algorithm was developed by a Hungarian mathematician Rudolf (Rudi) Emil Kalman in 1960 \cite{boken}. It's popular to use due to its efficiency when calculating predictions. \cite{kf eff}
 
 \subsection{Navigation Frames}
-Navigation algorithm involves various coordinate frames and therefore transformation between frame is a must. In this case four different frames will be used.\\
+Navigation algorithm involves various coordinate frames and therefore transformation between frame is a must. In this case, four different frames will be used.\\
 
-The inertial frame denoted $i$-frame for future notation is defined such that its origin is at the center of Earth and its axes $X_i$, $Y_i$ and $Z_i$ is non-rotating with respect to the stars. $Z_i$ is coincident with the Earth's polar axis, i.e. North.\\
+The Inertial frame denoted $i$-frame for future notation is defined such that its origin is at the center of Earth and its axes $X_i$, $Y_i$ and $Z_i$ is non-rotating with respect to the stars. $Z_i$ is coincident with the Earth's polar axis, i.e. North.\\
 
-The Earth navigation frame denoted $e$-frame for future notation is fixed with respect to Earth and has its origin at the center of the Earth. The frame is defined as $X_e$, $Y_e$ and $Z_e$, with $Z_e$ along Earth's polar axis. Axis $X_e$ lies along the intersection of the plane of the Greenwich meridian with the Earth's equatorial plane. The $e$-frame rotates at a constant rate with respect to the $i$-frame and is denoted $\omega_e$.\\
+The Earth navigation frame denoted $e$-frame for future notation is fixed with respect to Earth and has its origin at the center of the Earth. The frame is defined as $X_e$, $Y_e$ and $Z_e$, with $Z_e$ along Earth's polar axis. Axis $X_e$ and $Y_e$ lies along the intersection of the plane of the Greenwich meridian with the Earth's equatorial plane. The $e$-frame rotates at a constant rate with respect to the $i$-frame and is denoted $\omega_e$.\\
 
 The Navigation frame denoted $n$-frame for future notation is a local frame and has its origin located in the navigation system, in this case, point P, see Fig. \ref{WGS}, and its axes aligned with the directions of north, east and down, denoted NED. The turn rate of the navigation frame with respect to Earth's fixed frame, $\omega_{en}^n$, is directed by the motion of point P with respect to the Earth and is referred to the transport rate.   
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.3\textwidth]{Figures/WGS-coordinates.png}
-\caption{Earth and navigation frame.}
+\caption{Inertial, Earth and Navigation frame.}
 \label{WGS}
 \end{figure}
 
-The Body frame denoted $b$-frame is the sensitive axes of the IMU's sensors are made to coincide with the axes of the moving platform in which the sensors are mounted. The body, in this case, is referred to the dinghy, see Fig. \ref{Fig:body_frame}.
+The Body frame denoted $b$-frame is the sensitive axes of the IMU's sensors, which are made to coincide with the axes of the moving body in which the IMU is mounted in. The body, in this case, is referred to the dinghy, see Fig. \ref{Fig:body_frame}.
 
 \begin{figure}[H]
 \centering
@@ -40,15 +40,13 @@ The Body frame denoted $b$-frame is the sensitive axes of the IMU's sensors are 
 \label{Fig:body_frame}
 \end{figure}
 \begin{itemize}
-\item Yaw $(\psi)$: is the is the deviation of the vehicle’s forward $y$-axis from north, measured clockwise in the E-N plane.
-\item Pitch $(\theta)$: This is the angle that the forward $y$-axis of the b-frame makes with the
-E-N plane (i.e. local horizontal) owing to a rotation around its transversal $x$-axis.
-\item Roll $(\phi)$: This is the rotation of the $b$-frame about its forward y-axis, so the
-forward axis is also called the roll axis and the roll angle i
+\item Yaw $(\psi)$: Is an imaginary line running vertically through the ship and through its center of gravity. A yaw motion is a side-to side movement of the bow and stern of the dinghy \cite{SNAME}.
+\item Pitch $(\theta)$: Is an imaginary line running horizontally across the ship and through the centre of gravity. A pitch motion is an up-or-down movement of the bow and stern of the dinghy \cite{SNAME}.
+\item Roll $(\phi)$: Is an imaginary line running horizontally through the length of the ship, through its centre of gravity, and parallel to the waterline. A roll motion is a side-to-side or port-starboard tilting motion of the superstructure around this axis \cite{SNAME}.
 \end{itemize}
 
 \subsection{Transformation Between Frames}
-Referring to Fig. \ref{WGS} it can be observed that its possible to align the $n$-frame with the $e$-frame, this is done by rotating the $n$-frame by ($\lambda-90$)-degrees around its $x$-axis (east-direction) and ($-\phi-90$)-degrees about its $z-axis$, (downward direction) \cite{nonlinear}. Where $\lambda$ and $\varphi$ is the latitude and longitude, respectively. Then the transformation between the two frames can be done using the Direction Cosine Matrix, noted DCM for future notation, which is defined as \cite{nonlinear}.
+Referring to Fig. \ref{WGS} it can be observed that its possible to align the $n$-frame with the $e$-frame, this is done by rotating the $n$-frame by ($\lambda-90$)-degrees around its $X$-axis (east-direction) and ($-\phi-90$)-degrees about its $Z$-axis, (downward direction) \cite{nonlinear}. Where $\lambda$ and $\varphi$ is the latitude and longitude, respectively. Then the transformation between the two frames can be done using the Direction Cosine Matrix, noted DCM for future notation, which is defined as \cite{nonlinear}.
 \begin{equation}
 C_n^e=R_z(-\lambda-90)R_x(\varphi-90)
 \label{Cosine_1}
@@ -118,7 +116,7 @@ R_x(-\phi) = &
 0 & sin(\phi) & cos(\phi)
 \end{bmatrix}\label{R_x}
 \end{align}
-Expanding Eq. \eqref{Body_rotation} with \eqref{R_z}, \eqref{R_y} and \eqref{R_x}
+Solving Eq. \eqref{Body_rotation} with \eqref{R_z}, \eqref{R_y} and \eqref{R_x}
 \begin{align}
 C_b^n = &
 \begin{bmatrix}
@@ -174,14 +172,14 @@ q_4 =& \frac{1}{4q_1}(c_{21} - c_{12})\\
 \end{align*}
 
 
-The angular velocity of the $e$-frame with respect to the $i$-frame projected onto the $i$-frame is given as \cite{nonlinear}
+The angular velocity of the $e$-frame with respect to the $i$-frame projected onto the $e$-frame is given as \cite{nonlinear}
 \begin{equation}
 \bar{\omega}_{ie}^e = 
 \begin{bmatrix}
 0 & 0 & \omega_e
 \end{bmatrix}^T.
 \end{equation}
-Where $\omega_e$ is the angular velocity of the earth in the $i$-frame and has a constant value of
+Where $\omega_e$ is the angular velocity of the Earth and has a value of
 $7.2921158 \times 10^{-5}$ $rad/s$ \cite{nonlinear}. Using the projection matrix Eq. \eqref{Cosine_1} its possible to project $\bar{\omega}_ {ie}^i$ onto the $n$-frame
 \begin{align}
 \bar{\omega}_{ie}^n=C_e^n\bar{\omega}_{ie}^e=
@@ -198,14 +196,14 @@ $\bar{\omega}_{en}^n$ represents the turn rate of the $n$-frame with respect to 
 \end{bmatrix}^T.
 \label{omega_en}
 \end{align}
-Where $\dot{\lambda}=v_e/(R_N+h)cos(\varphi)$ and $\dot{\varphi}=v_n/(R_E+h)$ \cite{nonlinear}, here we assume the Earth to be an ellipsoid and that there is no variation in Earth's gravitation depending on where the user is on the ellipsoid. $R_N$ is the meridian radius of curvature and defined as $R_N=R_0(1-e^2)/(1-e^2sin^2\varphi)^{3/2}$ \cite{nonlinear}. $R_E$ is the transverse radius of curvature and defined as $R_E=R_0/(1-e^2sin^2\varphi)^{1/2}$. Where $R_0$ is the length of the semi-major axis and has a constant value of $6356752.3142$ m, $e$ is the major eccentricity of the ellipsoid and has a constant value of $0.081819$, $\varphi$ is the current latitude in radians, $v_e$ and $v_n$ is the velocity in east and north direction, respectively and $h$ is the height above the surface of the Earth. Then Rewriting Eq. \eqref{omega_en} with the new expressions.
+Where $\dot{\lambda}=v_e/(R_N+h)cos(\varphi)$ and $\dot{\varphi}=v_n/(R_E+h)$ \cite{nonlinear}, here we assume the Earth to be an ellipsoid and that there is no variation in Earth's gravitation depending on where the user is on the ellipsoid. $R_N$ is the meridian radius of curvature and defined as $R_N=R_0(1-e^2)/(1-e^2sin^2\varphi)^{3/2}$ \cite{nonlinear}. $R_E$ is the transverse radius of curvature and defined as $R_E=R_0/(1-e^2sin^2\varphi)^{1/2}$. Where $R_0$ is the length of the semi-major axis and has a constant value of $6356752.3142$ m, $e$ is the major eccentricity of the ellipsoid and has a constant value of $0.081819$, $\varphi$ is the current latitude in radians, $v_N$ and $v_E$ is the velocity in north and east direction, respectively and $h$ is the height above the surface of the Earth. Then Rewriting Eq. \eqref{omega_en} with the new expressions.
 \begin{align}
 \bar{\omega}_{en}^n=
 \begin{bmatrix}
 v_e/(R_E+h) & -v_n/(R_N+h) & -v_e tan(\varphi)/(R_N+h)
 \end{bmatrix}^T \label{omega_en_ny}
 \end{align}
-Now the turn rate of the $n$-frame with respect to $i$-frame, $\bar{\omega}_{in}^n$ can be obtained by adding Eq. \eqref{omega_ie} and \eqref{omega_en_ny}.
+Now the turn rate of the $n$-frame with respect to $i$-frame, $\bar{\omega}_{in}^n$ can be obtained by adding Eq. \eqref{omega_ie} and \eqref{omega_en_ny} together.
 \begin{align}
 \bar{\omega}_{in}^n=
 \begin{bmatrix}
@@ -214,17 +212,17 @@ Now the turn rate of the $n$-frame with respect to $i$-frame, $\bar{\omega}_{in}
 \label{Eq.omega_in}
 \end{align}
 
-Now Eq. \eqref{Eq.omega_in} is a function dependent both on velocity and position.
+\noindent Now Eq. \eqref{Eq.omega_in} is a function dependent both on velocity and position.
 
 \subsection{Inertial Navigation Equation}
-describing the position of the dinghy in the $n$-frame is done by \cite{nonlinear}.
+Describing the position of the dinghy in the $n$-frame is done by \cite{nonlinear}.
 \begin{align}
 \bar{r}^n=
 \begin{bmatrix}
 \varphi & \lambda & h
 \end{bmatrix}^T.
 \end{align}
-Since velocity is described as the rate of change of its position with respect to a frame of reference, and is a function of time, the velocities in North, East and down can be expressed as.
+Since velocity is described as the rate of change of its position with respect to a frame of reference and is a function of time, the velocities in north, east and down can be expressed as.
 \begin{align}
 \begin{bmatrix}
 v_N \\
@@ -266,7 +264,7 @@ v_D
 \label{Eq.v_n}
 \end{align}
 
-Thus the dynamics describing the system can be expressed as \cite{nonlinear}.
+\noindent Thus the dynamics describing the system can be expressed as \cite{nonlinear}.
 
 \begin{align}
 \dot{\bar{r}}_n = & D^{-1}v_n
@@ -277,17 +275,19 @@ Thus the dynamics describing the system can be expressed as \cite{nonlinear}.
 \label{Eq.C_b_n_t}
 \end{align}
 Where $\bar{f}^b$ is the specific force vector defined as the difference between the true acceleration in
-space and the acceleration due to gravity, $\bar{g}^n$ is the gravity vector,
+space and the acceleration due to gravity and $\bar{g}^n$ is the gravity vector. Where $\Omega$ is the skew matrix of $\omega$, more precise $\Omega_{ib}^b$ the skew-matrix of the outputs of the strapdown gyroscopes and $\Omega_{in}^n$ is the skew-matrix of Eg. \eqref{Eq.omega_in}. Skew-matrix is defined as cross product between the vectors.
 
 
 \subsection{INS mechanization}
-Since the INS has to work in discrete domain, Eq. \eqref{Eq.r_n_t}, \eqref{Eq.v_n_t} and \eqref{Eq.C_b_n_t} has to be discretized. The sampling time should be seen as a changing variable since it may not be constant instead it will fluctuate around $100Hz$, this means that $\Delta t_k = \Delta k_{k-1} - t_{k}$, this to improve the accuracy. The discrete dynamics are \cite{non-linear}
+Since the INS has to work in discrete time domain, Eq. \eqref{Eq.r_n_t}, \eqref{Eq.v_n_t} and \eqref{Eq.C_b_n_t} has to be discretized. The sampling time should be seen as a changing variable since it may not be constant instead it will fluctuate around $100Hz$, this means that $\Delta t_k = \Delta k_{k-1} - t_{k}$, this to improve the accuracy. The discrete dynamics are \cite{non-linear}, Using Eq. \eqref{Eq.r_n_t},\eqref{Eq.v_n_t} and \eqref{Eq.C_b_n_t}.
+
+
 \begin{align}
 \bar{r}_{k+1}^n = & \bar{r}_k + 0.5D^{-1}(\bar{v}_k^n + \bar{v}_{k+1}^n)\Delta t
 \label{Eq.r_n_d}\\
 v_{k+1}^n= & \bar{v}_k + \Delta \bar{v}_{k+1}^n
 \label{Eq.v_n_d}\\
-\dot{C}_b^n = & -\Omega_{bn}^n C_b^n \Delta t
+\dot{C}_b^n = & C_b^n(\Omega_{ib}^b - \Omega_{in}^b)\Delta t
 \label{Eq.C_b_n_d}
 \end{align}
 where 
@@ -295,15 +295,16 @@ where
 \Delta \bar{v}_{k+1}^n = \Delta \bar{v}_f^n - (2\omega_{ie}^n+\omega_{en}^n) \times \bar{v}_n \Delta t +\bar{\gamma}\Delta t
 \end{equation}
 where $\gamma = [0 \quad 0 \quad 9.8123]$.\\ \\
-The Navigation frame Inertial Navigation System can be seen in Fig. \ref{Fig:body_frame}, Where its possible to examine all the steps which were derived earlier
+The Navigation frame Inertial Navigation System can now be seen in Fig. \ref{Fig:body_frame}, Where its possible to examine all the steps which were derived earlier, from the IMU to the output.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.7\textwidth]{Figures/ins_2}
 \caption{The Inertial Navigation Frame}
 \label{Fig:body_frame}
 \end{figure}
+\section{Implementation of Sensor Fusion Using a Kalman Filter.}
 \subsection*{Perturbation Analysis}
-Since the differential equations describing velocity, position and attitude DCM are non-linear, utilize a perturbation series to minimize the errors \cite{pertubation}.
+Since the differential equations describing velocity, position, and the attitude, DCM is non-linear, utilize a perturbation series to minimize the errors \cite{pertubation}.
 \begin{equation}
 \hat{r}^n =r^n+\delta r^n
 \label{Eq.per_r}
@@ -316,7 +317,7 @@ Since the differential equations describing velocity, position and attitude DCM 
 \hat{C}_b^n = (I-E^n)C_b^n
 \label{Eq.per_c}
 \end{equation}
-Where $E^n$ is the skew matrix
+Where $E^n$ is the skew matrix and given as.
 \begin{align}
 \begin{bmatrix} 
 0 && -e_D && e_E \\
@@ -324,12 +325,12 @@ e_D && 0 && -e_N \\
 -e_E && e_N && 0
 \end{bmatrix}
 \end{align}
-Where $\hat{}$ is the computed values, $\delta$ and $e$ are the errors.
+Where $\hat{}$ is the computed values, $\delta$ and $e_{NED}$ are the errors in North, East and upward direction, respectively.
 
 \subsubsection{Error Dynamics Position}
-Perturbing \eqref{Eq.per_r}, the linearized position is obtained, since the position dynamics is a function of both position and velocity, the position error dynamics is obtained as
+Perturbing \eqref{Eq.per_r}, the linearized position is obtained since the position dynamics is a function of both position and velocity, the position error dynamics is obtained as
 \begin{equation}
-\delta \dot{\bar{r}}^n = F_{rr}\delta \bar{r}^n + F_{rv}\delta \bar{v}^n
+\delta \dot{\bar{r}}^n = F_{rr}\delta \bar{r}^n + F_{rv}\delta \bar{v}^n.
 \end{equation}
 
 \noindent Where
@@ -353,9 +354,9 @@ F_{rv} &=
 \label{Eq.Frv}
 \end{align}
 \subsubsection{Error Dynamics Velocity}
-The same is used when deriving the perturbation for the velocity, Eq. \eqref{Eq.per_v}, here, velocity is described by forces acting on the dinghy and gravity. Using Eq. \eqref{Eq.v_n_t}, and perturbation Eq. \eqref{Eq.per_v}, the following is obtained \cite{nonlinear}.
+The same is used when deriving the perturbation for the velocity, Eq. \eqref{Eq.per_v}, here, velocity is described by forces and gravity acting on the dinghy. Using Eq. \eqref{Eq.v_n_t}, and perturbation Eq. \eqref{Eq.per_v}, the following is obtained \cite{nonlinear}.
 \begin{equation}
-\delta \dot{\bar{v}}^n = \bar{v}_n \times \underbrace{(2\delta \bar{\omega}_{ie}^n+ \delta \bar{\omega}_{en}^n)}_{I}+\delta \bar{g}^n -\underbrace{(2\bar{\omega}_{ie}^n + \bar{\omega}_{en}^n)}_{II}\times \delta \bar{v}^n + \bar{f}^n\times e^n +C_b^n\delta \bar{f}^n
+\delta \dot{\bar{v}}^n = \bar{v}_n \times \underbrace{(2\delta \bar{\omega}_{ie}^n+ \delta \bar{\omega}_{en}^n)}_{I}+\delta \bar{g}^n -\underbrace{(2\bar{\omega}_{ie}^n + \bar{\omega}_{en}^n)}_{II}\times \delta \bar{v}^n + (\bar{f}^n\times) e^n +C_b^n\delta \bar{f}^n
 \label{Eq.delta_v}
 \end{equation}
 where $II$ is expressed as follow, using Eq. \eqref{Eq.omega_in}.
@@ -393,7 +394,7 @@ and
 \end{bmatrix}
 \label{Eq.Omega_v}
 \end{align}
-Then calculating the first term on the left side of Eg. \eqref{Eq.delta_v}, using Eq. \eqref{Eq.Omega_r} and \eqref{Eq.Omega_v}
+Then calculating the first term on the left side of Eq. \eqref{Eq.delta_v}, using Eq. \eqref{Eq.Omega_r} and \eqref{Eq.Omega_v}
 \begin{align}
 \bar{v}^n\times(2\delta \bar{\omega}_{ie}^n+\delta \bar{\omega}_{en}^n) = 
 \bar{v}^n \times \delta\Omega_r\delta\bar{r}^n +\bar{v}^n\times\delta\Omega_v\delta\bar{v}^n
@@ -482,7 +483,7 @@ F_{ev} =
 \end{align}
 
 \subsection{Implementing the Fusion Kalman Filter}
-This system uses a feedback method to control the errors, the model can be seen in Fig. \ref{Fig:Feedback}.
+This system uses a feedback method to control the drift errors in the IMU, the model can be seen in Fig. \ref{Fig:Feedback}.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.7\textwidth]{Figures/feed-back.png}
@@ -567,11 +568,11 @@ Q_k\approx \Phi_k GQG^T \Phi_k^T.
 \label{Eq.Q_k}
 \end{equation}
 
-If Eq. \eqref{Eq.Q} is analyzed, by increase the norm of $Q_k$ the Kalman Filter trusts the measurements more than the system, which will make the output more noisy due to noise induced from the measurements, the advantages with a large norm is that the time lag will decrease. If the norm is small the measurements will be less induced with measurement noise but time lag will increase, which means that we don't trust the measurements. Determining $Q_k$ can be done by testing several different settings and from that make an assumption, but a good assumption should be that the trajectory of the output should follow the GPS data.\\
+If Eq. \eqref{Eq.Q} is analyzed, by increase the norm of $Q_k$ the Kalman Filter trusts the measurements more than the system, which will make the output more noisy due to noise induced from the measurements, the advantages with a large norm is that the time lag will decrease. If the norm is small the measurements will be less induced by measurement noise but time lag will increase, which means that we don't trust the measurements. Determining $Q_k$ can be done by testing several different settings and from that make an assumption, but a good assumption should be that the trajectory of the output should follow the GPS data when the GPS is connected to several satellites.\\
 
 
 
-The Kalman filter is a linear quadratic estimator which is recursive and the estimator is unbiased and has minimum variance. the algorithm starts from a random process model, i.e. Eq. \eqref{Eq.discrete} and the following observation matrices \cite{Discrete_kalman}.
+The Kalman filter is a linear quadratic estimator which is recursive and the estimator is unbiased and has minimum variance. the algorithm starts with a random process model, i.e. Eq. \eqref{Eq.discrete} and the following observation matrices \cite{Discrete_kalman}.
 
 \begin{equation}
 z_k = H_k\bar{x}_k + \bar{e}_k
@@ -585,7 +586,7 @@ where $z_k$ is the measurement vector and $e_k$ is random measurement noise, wit
 \end{cases}
 \end{align}
 
-The Kalman Filter can be seen as a two step filter with a prediction update and a correction update. In the latter case the Kalman gain is first calculated by
+The Kalman Filter can be seen as a two-step filter with a prediction update and a correction update. In the latter case, the Kalman gain is first calculated by
 \begin{equation}
 K_k = P_k^-H^T(HP_k^-H^T+R_k)^{-1}
 \end{equation}
@@ -618,7 +619,7 @@ h_{INS} - h_{GPS} \\
 v_{nINS} - v_{nGPS} \\
 v_{eINS} - v_{eGPS} \\
 v_{hINS} - v_{hGPS}
-\end{bmatrix}
+\end{bmatrix}.
 \end{align}
 The measurement matrix $H_k$ is defined such
 \begin{align}
@@ -652,8 +653,7 @@ r_n(t_k(GPS) = r_n(t_{imu}(k)) + \frac{r_n(t_{imu}(k+1))-r_n(t_{imu}(k))}{t_{imu
 v_n(t_k(GPS) = v_n(t_{imu}(k)) + \frac{v_n(t_{imu}(k+1))-v_n(t_{imu}(k))}{t_{imu}(k+1)-t_{imu}(k)}(t_{GPS}(k)-t_{GPS}(k)).
 \end{equation}
 \subsection{Result}
-The data provided by the Inertial Navigation System is working better than just using the raw GPS data, this can be seen in Fig. \ref{Fig:result_kalman}. In the beginning the INS is more inaccurate, but after a while tunes it self, and can follow the true line much better than the GPS. This is expected since the Kalman Filter is be the best linear, unbiased estimator.
-The GPS precision does not change over time, this is also expected (Using constant amount of satellites), since the GPS will provide an absolute position with the same standard deviation.
+The data provided by the Inertial Navigation System is working better than just using the raw GPS data, in some occasions. If the goal is to estimate the position, then it's better to use the INS connected to a Kalman Filter, this can be seen in Fig. \ref{Fig:result_kalman}. As seen, the Filtered data is inaccurate in the beginning but after some time converges to the true value, true value as in the case of wanted value, and at some points even catches the wanted value. In comparison to the raw GPS data, the INS is a better estimator for the user's position.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{Figures/result.eps}
@@ -661,16 +661,38 @@ The GPS precision does not change over time, this is also expected (Using consta
 \label{Fig:result_kalman}
 \end{figure}
 
-Inspecting the Mean Squared Error, MSE in Fig \ref{Fig:mse} the Error is high in the beginning for the filtered data but converges to a better MSE compared to GPS data. Why one should consider using only GPS is since the user will have a more constant error, hence now the performance. 
+Inspecting the Mean Squared Error, MSE for the position in $XY$ pane in Fig \ref{Fig:mse} for both INS and raw GPS data we can see that the error is lower for the INS data. 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{Figures/mse.eps}
 \caption{Mean Squared Error}
 \label{Fig:mse}
 \end{figure}
-\subsection{Future Work}
-Implement a working real-time system for the sensor fusion between the GPS and INS, here one should consider computer efficient algorithms. This since the algorithm contains multiple matrix multiplications and a matrix inverse, here one should consider literature as Fundamentals of Scientific Computing, Bertil Gustafsson.\newline
 
+When estimating the height, i.e. $Z$-direction the result is poor for the INS, the estimated value from the INS is diverging from the true value, this can be seen in Fig. \ref{Fig:Height}. In this case, the GPS data is more accurate. 
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.5\textwidth]{Figures/Height.eps}
+\caption{Height. True VS. Filtered and raw GPS data.}
+\label{Fig:Height}
+\end{figure}
+The velocities in the $XY$ plane does not represent the true system in a good manner either this can be seen in Fig. \ref{Fig:velocity}. In this case, the GPS data is more accurate as well.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.5\textwidth]{Figures/velocity.eps}
+\caption{The velocities in $XY$ plane.}
+\label{Fig:velocity}
+\end{figure}
+\subsection{Discussion/Future Work}
+Depending on what the user wants to measure, e.q. position in 2 dimensions, height or velocity, different sensors should be used. In the case of the first, the INS should be used in the case of the two latter the GPS should be used. \\
+
+The Matlab code that exists, as right now, can read from the Nucleo Board using a serial read (assuming that the Nucleo Board uses the same firmware that was used by us), use stored data, (data created by our group) and also generate data, with the IMU and GPS wanted characteristics. \\
+Also there is a static calibration program for the accelerometer. To see how the program works there exists a readme.txt file in the Matlab folder.\\
+
+Implement a working real-time system for the sensor fusion between the GPS and INS, there exits C-code for this already, but there is some serious bug/bugs which makes the error stored in $\hat{X}$ converge exponentially. A serious attempt finding the problem was conducted and is narrowed down to a problem when calculating the Kalman Gain, $K_k$. Also, figure out why the height position diverges from the wanted value.\\
+
+Improvements on the INS/Kalman Filter implementation can be done as well, here are some thoughts that might be seen as guidelines/starting points to improve the system. \\
 To obtain much more accurate information from the INS one should consider more advanced techniques for calibrating the IMU. In this case, a static calibration technique was studied. This is done by keeping the IMU in a fixed position to observe the effect of gravity.
 Consider implementing a more advanced technique, e.g. using this three-stage process.
 \begin{itemize}
@@ -685,10 +707,14 @@ The purpose of these more advanced calibration technique is to determine the fol
 \item null bias error
 \item axis alignment error, (might not be perfectly perpendicular)
 \end{itemize}
-Also, the dinghy's body may flex due to rough sea conditions, to solve this implement one master IMU and one slave IMU, consider literature as Strap Down Inertial Navigation Technology, D.H. Titterton and J.L. Weston as a starting point for these different calibration methods. \newline 
+Also, the dinghy's body may flex due to rough sea conditions, to solve this implement one master INS and one slave INS, consider literature as Strap Down Inertial Navigation Technology, D.H. Titterton and J.L. Weston as a starting point for these different calibration methods. \newline 
 
 A more advanced interpolation technique between IMU data and GPS data, here referencing to literature like Fundamentals of Scientific Computing, Bertil Gustafsson. E.g. Lagrange polynomial can be used to capture the true value better then using a linear interpolation.\newline
 
 
 One should also try different types of control methods to see if one can achieve more accurate results or not, e.g. feed-forward method.\\
 Weighted parameters if one believes the INS more than the GPS or vice-versa, this question arises when e.g. the GPS is connected to many/few satellites or if the user is having a large/small velocity or sensor anomalies. \\ \\
+
+
+
+
