--- a/report/main.tex
+++ b/report/main.tex
@@ -1,59 +1,23 @@
 \documentclass[a4paper]{article}
 
 %text
-%\usepackage[utf8]{inputenc}
-%\usepackage[numbers,super]{natbib}
-%\usepackage{lipsum}
-%\usepackage{amssymb,amsmath}
-%\usepackage{gensymb}
-%\usepackage{listings}
-%\usepackage{amsfonts}
-%\usepackage{todonotes}
-%\usepackage{listings}
-%\usepackage{scrextend}
-%graphics
-%\usepackage{graphicx, xcolor}
-%\usepackage{rotating}
-%\usepackage{subfig}
-%\usepackage{float}
-\usepackage[top=.8in, bottom=1.0in, left=1.in, right=.7in]{geometry}
-
-
-
-\usepackage[utf8x]{inputenc}
-\usepackage[swedish,english]{babel}
-\usepackage[colorlinks=true,linkcolor=black]{hyperref}
-\usepackage{listings}
-\usepackage{color} %red, green, blue, yellow, cyan, magenta, black, white
-\definecolor{mygreen}{RGB}{28,172,0} % color values Red, Green, Blue
-\definecolor{mylilas}{RGB}{170,55,241}
-
-\usepackage{listings}
-\usepackage{hyperref}
-\usepackage{bookmark}
-
-\usepackage{siunitx}  % Provides the \SI{}{} command for typesetting SI units
-\usepackage{graphicx} % Required for the inclusion of images
-\usepackage{amsmath}
+\usepackage[utf8]{inputenc}
+\usepackage[numbers,super]{natbib}
+\usepackage{lipsum}
+\usepackage{amssymb,amsmath}
 \usepackage{gensymb}
+\usepackage{listings}
 \usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{subcaption}
-\usepackage{tabularx}
-\usepackage{dcolumn}
-\usepackage{booktabs}
-\usepackage{hyperref}
-\usepackage{graphicx}
-\usepackage[swedish]{babel}
-\graphicspath{ {images/} }
-\graphicspath{ {/Users/johanbjork/Documents/F0008T/hemuppgift} }
+\usepackage{todonotes}
+\usepackage{listings}
+\usepackage{scrextend}
+graphics
+\usepackage{graphicx, xcolor}
+\usepackage{rotating}
+\usepackage{subfig}
 \usepackage{float}
-\usepackage{commath}
 
 
-  %FÖR MATLABKOD!
- 
-\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
 
 % links
 \usepackage{color}
