--- a/report/main.tex
+++ b/report/main.tex
@@ -94,7 +94,7 @@
 
 \section{The Physics of Sailing}
 \label{sec:physics}
-\chapterauthor{Henrik, Theolin (Oskar, Axelsson)}
+\chapterauthor{Theolin, Henrik (Axelsson, Oskar)}
 \input{physics.tex}
 
 \section{Product Application}
@@ -117,9 +117,9 @@
 \input{android.tex}
 
 \clearpage
-\section{Kalman filter}
+\section{Inertial Navigation System and Kalman filter}
 \label{kf}
-\chapterauthor{Axelsson, Oskar (no one)}
+\chapterauthor{Axelsson, Oskar (Theolin, Henrik)}
 \input{kf.tex}
 
 
