--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,3 +1,2 @@
-Some abstract description of the project... 
-\lipsum[4-5]
-testing...
+Throughout history sailing has been a key ingredient to our civilization, trading, fishing, exploring, transporting, i.e. todays civilization would not have been the same if sailing wasn't invented. Today sailing has been developed more into a hobby from large sailing boats all the way down to one-man dinghies. 
+This system is developed to help the skipper on dinghies to make better decision, for both experienced and novices sailors. This is achieved using inexpensive sensors and then give the skipper feedback using graphics, sound and vibrations through a android application. Measurements are done on forces exerted on the centerboard, tilt of the dinghy, position and velocity. Design has been focused on energy efficiency, waterproof and easy-to-handle.
