--- a/report/references.tex
+++ b/report/references.tex
@@ -42,6 +42,10 @@
   \url{https://sv.wikipedia.org/wiki/Volvo_Amazon}
 \bibitem{png}
   \url{https://sv.wikipedia.org/wiki/PNG}
+\bibitem{activity}
+  \url{https://developer.android.com/reference/android/app/Activity.html}
+\bibitem{uml}
+  \url{https://en.wikipedia.org/wiki/Unified_Modeling_Language}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
